src/objects/Assessable_Fields_Mapping__c.object
<CustomObject>
    <description>Where ExAM stores information about how to map Answer data to Assessable Object Fields.</description>
    <fields>
        <fullName>Assessable_Object_API__c</fullName>
        <label>Assessable Object API</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessable_Object_Field_API__c</fullName>
        <label>Assessable Object Field API</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Template</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipLabel>Assessable Fields Mappings</relationshipLabel>
        <relationshipName>Assessable_Fields_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Manager_Field_API__c</fullName>
        <label>Assignment Manager Field API</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Case_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Case Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_From__c</fullName>
        <label>Mapped From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Answer</fullName>
                </value>
                <value>
                    <fullName>Assignment Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Template</label>
        <referenceTo>Question_Template__c</referenceTo>
        <relationshipLabel>Assessable Fields Mappings</relationshipLabel>
        <relationshipName>Assessable_Fields_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Answer_Response_Or_Score__c</fullName>
        <label>Store Answer Response/Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Score</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessable Fields Mapping</label>
    <nameField>
        <displayFormat>AFM-{0000}</displayFormat>
        <label>Assessable Fields Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessable Fields Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>